tests/snapshots/element_attributes__it_can_parse_attribute_key_mixed_case_symbols_only.snap
---
source: tests/element_attributes.rs
assertion_line: 29
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "div",
      "variant": "void",
      "attributes": {
        "data-cat": null
      }
    }
  ]
}
