tests/snapshots/element_attributes__it_can_parse_attribute_multiple_quotes.snap
---
source: tests/element_attributes.rs
assertion_line: 114
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "div",
      "variant": "void",
      "attributes": {
        "cat": "she says: 'mjau mjau'",
        "horse": "horse says:\"pffff\""
      }
    }
  ]
}
