tests/snapshots/element_attributes__it_can_parse_double_quote.snap
---
source: tests/element_attributes.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "div",
      "variant": "normal",
      "attributes": {
        "id": "one"
      }
    }
  ]
}
