tests/snapshots/element_attributes__it_can_parse_id.snap
---
source: tests/element_attributes.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    {
      "name": "img",
      "variant": "void",
      "attributes": {
        "id": "a"
      }
    }
  ]
}
